# PromptRose

./: README.md  build_exe.py  create_icon.py  environment.yaml  package-lock.json  package.json  prompt_wheel.py  start.bat
.svelte-kit/: ambient.d.ts
.svelte-kit/output/client/.vite/: manifest.json
.svelte-kit/output/client/_app/: version.json
.svelte-kit/output/client/_app/immutable/chunks/: 6yjlgM9W.js  DZcUXPM7.js
.svelte-kit/output/client/_app/immutable/entry/: start.CKPCgv_m.js
.svelte-kit/output/client/_app/immutable/nodes/: 0.BA4RZsrC.js  1.meAzC2Vq.js  2.BOmWZBsg.js
.svelte-kit/output/server/: manifest-full.js  manifest.js
.svelte-kit/output/server/.vite/: manifest.json
.svelte-kit/output/server/chunks/: index.js  internal.js
.svelte-kit/output/server/entries/pages/: _page.svelte.js
.svelte-kit/output/server/nodes/: 0.js  1.js  2.js
prompts/: README.md
src/: App.svelte  README.md
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/icons/: icon.icns
src/lib/components/: RadialMenu.svelte
themes/: README.md
